# itwc

./: CMakeLists.txt  README.md  test_config
data/ITWC/: test.html  topics.txt
data/ITWC/css/: chart.css  create.css  front.css  lastpick.css  main.css  rank.css
data/ITWC/html/: chart.html  create.html  front.html  lastpick.html  main.html  rank.html
data/ITWC/image_list/: Food.txt  Fruit.txt  Game.txt  UCLABuildings.txt
data/ITWC/score_map/: Fruit.txt  Game.txt
data/echo_data/: index.html  test.txt
docker/: Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: README.md  base_request_handler.h  boost_networking_injector.h  config_parser.h  data_structures.h  echo_request_handler.h  handle_dispatch.h  health_request_handler.h  html_parser.h  itwc_handler.h  log_handler.h  make_response.h  mime_types.h  not_found_handler.h  request_validation.h  response_parser.h  reverse_proxy_handler.h  server.h  server_configuration.h  session.h  session_manager.h  static_request_handler.h  status_request_handler.h
src/: base_request_handler.cc  boost_networking_injector.cc  config_parser.cc  data_structures.cc  echo_request_handler.cc  handle_dispatch.cc  health_request_handler.cc  html_parser.cc  itwc_handler.cc  log_handler.cc  make_response.cc  mime_types.cc  not_found_handler.cc  request_validation.cc  response_parser.cc  reverse_proxy_handler.cc  server.cc  server_configuration.cc  server_main.cc  session.cc  session_manager.cc  static_request_handler.cc  status_request_handler.cc
tests/: config_1  config_2  config_local_8080  config_parser_test.cc  config_reverse  config_reverse_2  config_test  handle_dispatch_test.cc  health_handler_test.cc  html_parser_test.cc  log_handler_test.cc  mime_type_test.cc  request_handler_test.cc
tests/data_structures_test/: data_structures_test.cc
tests/echo_handler_test/: echo_handler_test.cc
tests/itwc_test/: itwc_handler_test.cc
tests/itwc_test/html/: front.html
tests/make_response_test/: make_response_test.cc
tests/not_found_test/: not_found_test.cc
tests/request_validation_test/: request_validation_test.cc  test_request_01  test_request_02  test_request_03
